# checkeRS

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: game.rs  main.rs  main_menu.rs  network.rs  scene.rs
server/: Cargo.toml
server/src/: main.rs
src/: board.rs  coords.rs  game_state.rs  game_utils.rs  main.rs  piece.rs  player.rs
store/: Cargo.toml
store/src/: board.rs  coords.rs  game_state.rs  game_utils.rs  lib.rs  piece.rs  player.rs  utils.rs
