[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
store = { path = "../store" }
cli-log = "2.1.0"
crossterm = "0.29.0"
ratatui = "0.30.0"
renet = "2.0.0"
server = { version = "0.1.0", path = "../server" }
env_logger = "0.11.8"
renet_netcode = "2.0.0"
tui-input = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
postcard = "1.0"
throbber-widgets-tui = "0.10.0"
